fix issue #384, related to solutions warning modal

--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -37,7 +37,7 @@
 							<h4>Formulate the policy solutions as objectives <i class="fa fa-info-circle" title="The advocacy objectives are what the organization aims to achieve over several years (usually 3-5). It is the overall policy change that is desired as a result of advocacy effort."></i></h4>
 
 							<div class="alert alert-info" role="alert" ng-class="{hidden: unrelated_solutions < 1}">
-								<i class="fa fa-exclamation-triangle"></i> <a href="#">There are still {{unrelated_solutions}} policy solutions without objectives</a>
+								<i class="fa fa-exclamation-triangle"></i> <a href="#" ng-click="list_policy_solutions()">There are still {{unrelated_solutions}} policy solutions without objectives</a>
 							</div>
 
 							<div>
