fixed titles of modals in the stage 3; closes #401

--- a/app/views/objectives/_barriers_modal.html.erb
+++ b/app/views/objectives/_barriers_modal.html.erb
@@ -1,17 +1,17 @@
 <script type="text/ng-template" id="barrier-aside.html">
-                <div class="modal-header">
-                  <h3 class="modal-title">Actor</h3>
-                </div>
-                <div class="modal-body">
-                  <form>
-                    <div class="form-group">
-                      <label for="title">Description</label>
-                      <input type="text" name="description" class="form-control" ng-model="current_barrier" placeholder="Enter escription">
-                    </div>
-                  </form>
-                </div>
-                <div class="modal-footer">
-                  <button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: current_barrier == ''}">Save</button>
-                  <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
-                </div>
-              </script>
+  <div class="modal-header">
+    <h3 class="modal-title">Barrier</h3>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="title">Description</label>
+        <input type="text" name="description" class="form-control" ng-model="current_barrier" placeholder="Enter escription">
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: current_barrier == ''}">Save</button>
+    <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
+  </div>
+</script>
