--- a/app/views/objectives/_factors_modal.html.erb
+++ b/app/views/objectives/_factors_modal.html.erb
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="enabling-factor-aside.html">
   <div class="modal-header">
-    <h3 class="modal-title">Actor</h3>
+    <h3 class="modal-title">Enabling Factor</h3>
   </div>
   <div class="modal-body">
     <form>
