fixed minor typo

--- a/app/views/objectives/_barriers_modal.html.erb
+++ b/app/views/objectives/_barriers_modal.html.erb
@@ -6,7 +6,7 @@
     <form>
       <div class="form-group">
         <label for="title">Description</label>
-        <input type="text" name="description" class="form-control" ng-model="current_barrier" placeholder="Enter escription">
+        <input type="text" name="description" class="form-control" ng-model="current_barrier" placeholder="Enter description">
       </div>
     </form>
   </div>
