--- a/app/views/objectives/_actors_modal.html.erb
+++ b/app/views/objectives/_actors_modal.html.erb
@@ -21,6 +21,10 @@
         <textarea name="description" class="form-control" ng-model="current_actor.description" placeholder="Add any important actor info"></textarea>
       </div>
       <div class="form-group">
+        <label for="important">Important</label>
+        <input type="checkbox" name="important" class="form-control" ng-model="current_actor.important"></input>
+      </div>
+      <div class="form-group">
         <label for="influence">Influence Level</label>
         <select class="form-control" id="influence" ng-model="current_actor.influence">
           <option value="">Select Influence Level</option>
