--- a/app/views/projects/_objective_modal.html.erb
+++ b/app/views/projects/_objective_modal.html.erb
@@ -3,37 +3,210 @@
 		<h3 class="modal-title">Objective</h3>
 	</div>
 	<div class="modal-body">
-		<form>
-			<div class="form-group">
-				<label for="title">Title</label>
-				<input type="text" name="title" class="form-control" ng-model="current_objective.title" placeholder="Enter the objective's title">
+		<div class="form-group">
+			<label for="solution">Select Solution</label>
+			<select class="form-control" name="solution_ids" multiple="multiple" ng-multiple="true" ng-model="current_objective.solution_ids" ng-options="solution.id as solution.title for solution in solutions">
+			</select>
+		</div>
+		<div class="form-group">
+			<label for="objective-type">Objective Type</label>
+			<select class="form-control" id="objective-type" ng-model="current_objective.objective_type">
+				<option ng-repeat="obj_type in objective_types">{{obj_type}}</option>
+			</select>
+		</div>
+		<div class="form-group">
+			<label for="objective">Objective</label>
+			<textarea name="title" class="form-control" ng-model="current_objective.title" placeholder="Add any important objective info"></textarea>
+		</div>
+		<hr>
+		<!-- key contribution -->
+		<h4 class="mtb40">KEY CONTRIBUTION: is the advocacy objective a key contribution to the problem?</h4>
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Big difference:</strong> Would success on the advocacy objective make a significant difference in addressing the problem children face (assess in comparison with other objectives)?</p>
 			</div>
-			<div class="form-group">
-				<label for="description">Description</label>
-				<textarea name="description" class="form-control textarea-400" ng-model="current_objective.description" placeholder="Add any important objective info"></textarea>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="big-difference">Score</label>
+					<input type="number" class="form-control" id="big-difference-score" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.big_difference_score">
+				</div>
+				<div class="form-group">
+					<label for="big-difference-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="big-difference-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.big_difference_arguments"></textarea>
+				</div>
 			</div>
-			<div class="form-group">
-				<label for="prioritized">Prioritized</label>
-				<input type="checkbox" name="prioritized" class="form-control" ng-model="current_objective.prioritized"></input>
+		</div>
+
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Multiplying effect:</strong> Would it address several important real world problems at the same time? (at national level and/or at national and global level)</p>
 			</div>
-			<div class="form-group">
-				<label for="key_contribution">Subtotal Key Contribution</label>
-				<input type="number" name="key_contribution" class="form-control" ng-model="current_objective.key_contribution" min="0" value="0"></input>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="multiplying-effect">Score</label>
+					<input type="number" class="form-control" id="multiplying-effect" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.multiplying_effect_score">
+				</div>
+				<div class="form-group">
+					<label for="multiplying-effect-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="multiplying-effect-arguments" placeholder="Enter Multiplying Effect" ng-model="current_objective.evaluation.multiplying_effect_arguments"></textarea>
+				</div>
 			</div>
-			<div class="form-group">
-				<label for="momentum">Subtotal Momentum</label>
-				<input type="number" name="momentum" class="form-control" ng-model="current_objective.momentum" min="0" value="0"></input>
+		</div>
+
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Catalytic:</strong> Is achieving this particular advocacy objective almost a precondition for tackling other UNICEF advocacy objectives (e.g. policy adoption is a precondition for funding)?</p>
 			</div>
-			<div class="form-group">
-				<label for="comparative_advantage">Subtotal Comparative Advantage</label>
-				<input type="number" name="comparative_advantage" class="form-control" ng-model="current_objective.comparative_advantage" min="0" value="0"></input>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="catalytic">Score</label>
+					<input type="number" class="form-control" id="catalytic" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.catalytic_score">
+				</div>
+				<div class="form-group">
+					<label for="catalytic-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="catalytic-arguments" placeholder="Enter Multiplying Effect" ng-model="current_objective.evaluation.catalytic_arguments"></textarea>
+				</div>
 			</div>
-			<div class="form-group">
-				<label for="solution_ids">Related Solutions</label>
-				<select style="max-width: 735px;" name="solution_ids" multiple="multiple" ng-multiple="true" ng-model="current_objective.solution_ids" ng-options="solution.id as solution.title for solution in solutions">
-				</select>
+		</div>
+		<!-- end key contribution -->
+
+		<!-- momentum -->
+		<hr>
+		<h4 class="mtb40">MOMENTUM: Does the advocacy objective have enough momentum, or can momentum be generated?</h4>
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Demand:</strong> Is there demand to carry the advocacy objective forward?</p>
+				<ul>
+					<li>Are there specific champions pushing the issue (governments; policy-makers; influential figures; etc.)?</li>
+					<li>Are rights-holders (including children) articulating specific demands to duty-bearers?</li>
+					<li>Are other important constituencies pushing policy-makers?</li>
+					<li>Is there sufficient public awareness?</li>
+				</ul>
 			</div>
-		</form>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="demand">Score</label>
+					<input type="number" class="form-control" id="demand" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.demand_score">
+				</div>
+				<div class="form-group">
+					<label for="demand-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="demand-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.demand_arguments"></textarea>
+				</div>
+			</div>
+		</div>
+
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Hooks & processes:</strong></p>
+				<ul>
+					<li>Are there legislative or policy processes (national, regional or global) that open windows of opportunity to push for the advocacy objective?</li>
+					<li>Has a UN Treaty Body, such as the Committee on the Rights of the Child, addressed the issue as part of country reporting or a General Comment?</li>
+				</ul>
+			</div>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="hooks-processes">Score</label>
+					<input type="number" class="form-control" id="hooks-processes" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.hooks_processes_score">
+				</div>
+				<div class="form-group">
+					<label for="hooks-processes-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="hooks-processes-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.hooks_processes_arguments"></textarea>
+				</div>
+			</div>
+		</div>
+
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Intuitive:</strong> Is the issue behind the advocacy objective easy to communicate and understand, or can we get it to be?</p>
+				<ul>
+					<li>Can the issue and the proposal be articulated in a compelling narrative?</li>
+					<li>Is it an issue that has the potential to generate compassion and solidarity?</li>
+				</ul>
+			</div>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="intuitive">Score</label>
+					<input type="number" class="form-control" id="intuitive" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.intuitive_score">
+				</div>
+				<div class="form-group">
+					<label for="intuitive-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="intuitive-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.intuitive_arguments"></textarea>
+				</div>
+			</div>
+		</div>
+		<!-- end momentum -->
+
+		<!-- Comparative Advantage -->
+		<hr>
+		<h4 class="mtb40">Comparative Advantage: Does UNICEF have a mandate and comparative advantage with regard</h4>
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Alignment:</strong></p>
+				<ul>
+					<li>Is it consistent with UNICEF’s mandate (CRC and SDGs)?</li>
+					<li>Is there a clear case under Convention on the Rights of Children (CRC)?</li>
+					<li>Is it part of UNICEF’s existing medium- and long-term strategy and commitments, including the Strategic Plan?</li>
+					<li>Does it contribute to reduce disparities?</li>
+					<li>Are there synergies with other UNICEF agendas, e.g. existing fundraising schemes?</li>
+					<li>Do we have senior management buy-in?</li>
+				</ul>
+			</div>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="alignment">Score</label>
+					<input type="number" class="form-control" id="alignment" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.alignment_score">
+				</div>
+				<div class="form-group">
+					<label for="alignment-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="alignment-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.alignment_arguments"></textarea>
+				</div>
+			</div>
+		</div>
+
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Added value:</strong> Can UNICEF add value to the voices of other stakeholders in the pursuit of the advocacy objective?</p>
+				<ul>
+					<li>Is the issue behind the advocacy objective being addressed by anybody? If so, is it being approached appropriately (e.g. rights-based approach)?</li>
+					<li>Do we have, or can we generate, the data and evidence to make a robust case?</li>
+					<li>Do we have the technical expertise? </li>
+					<li>Are we able to convene key partners?</li>
+				</ul>
+			</div>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="added-value">Score</label>
+					<input type="number" class="form-control" id="added-value" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.added_value_score">
+				</div>
+				<div class="form-group">
+					<label for="added-value-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="added-value-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.added_value_arguments"></textarea>
+				</div>
+			</div>
+		</div>
+
+		<div class="row mb20">
+			<div class="col-md-4">
+				<p><strong>Loss or gain:</strong> Does UNICEF have a lot to gain (or a lot to lose) from pursuing (or not pursuing) the advocacy objective? </p>
+				<ul>
+					<li>Can the issue help raise UNICEF’s profile, or allow UNICEF to position itself strategically?</li>
+					<li>Are there synergies with other UNICEF agendas, e.g. existing fundraising schemes?</li>
+					<li>Is it an issue that UNICEF can’t be seen to be silent on (UNICEF must be there)?</li>
+					<li>Are there significant risks for UNICEF, including from not engaging on the issue? </li>
+				</ul>
+			</div>
+			<div class="col-md-8">
+				<div class="form-group">
+					<label for="loss-or-gain">Score</label>
+					<input type="number" class="form-control" id="loss-or-gain" placeholder="Enter number 1 to 3" min="1" max="3" ng-model="current_objective.evaluation.loss_gain_score">
+				</div>
+				<div class="form-group">
+					<label for="loss-or-gain-arguments">Main arguments</label>
+					<textarea class="form-control" rows="3" id="loss-or-gain-arguments" placeholder="Enter Main Arguments" ng-model="current_objective.evaluation.loss_gain_arguments"></textarea>
+				</div>
+			</div>
+		</div>
+		<!-- end Comparative Advantage -->
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: current_objective.title == ''}">Save</button>
