--- a/app/views/objectives/_actors_modal.html.erb
+++ b/app/views/objectives/_actors_modal.html.erb
@@ -26,24 +26,14 @@
       </div>
       <div class="form-group">
         <label for="support">Support</label>
-        <select class="form-control" id="support" ng-model="current_actor.support">
-          <option value="">Select Support Level</option>
-          <option value="2">Very supportive</option>
-          <option value="1">Significant Support</option>
-          <option value="0">Moderate support</option>
-          <option value="-1">Low support</option>
-          <option value="-2">No support</option>
+        <select name="support" ng-model="current_actor.support">
+          <option ng-repeat="sup in support">{{ sup }}</option>
         </select>
       </div>
       <div class="form-group">
         <label for="influence">Influence Level</label>
-        <select class="form-control" id="influence" ng-model="current_actor.influence">
-          <option value="">Select Influence Level</option>
-          <option value="2">Very influential</option>
-          <option value="1">Significant influence</option>
-          <option value="0">Moderate influence</option>
-          <option value="-1">Low influence</option>
-          <option value="-2">No influence</option>
+        <select name="influence" ng-model="current_actor.influence">
+          <option ng-repeat="inf in influence">{{ inf }}</option>
         </select>
       </div>
     </form>
