--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -52,13 +52,13 @@
               <div class="panel-heading">
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)">Edit</button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)">Delete</button>
-                <h4 class="panel-title"><a data-toggle="collapse" href="#objetive1" aria-expanded="false" aria-controls="collapseExample">{{ policy.title }}</a></h4>
+                <h4 class="panel-title"><a data-toggle="collapse" href="#objetive-{{policy.id}}" aria-expanded="false" aria-controls="collapseExample">{{ policy.title }}</a></h4>
               </div>
               <!-- policy solutions -->
-              <div class="collapse in" id="objetive1">
+              <div class="collapse in" id="objetive-{{policy.id}}">
                 <button type="button" class="btn btn-info pull-right" ng-click="add_edit_solution(policy.id)">Add</button>
                 <h4>Which policy solutions would constitute an appropriate response? <span ng-if="policy.solutions"><i class="fa fa-info-circle" title="What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?"></i></span></h4>
-                <p ng-if="policy.solutions.length > 0">
+                <p ng-if="policy.solutions.length == 0">
                   What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?
                 </p>
                 <table class="table">
