--- a/app/views/projects/_solutions_list_modal.html.erb
+++ b/app/views/projects/_solutions_list_modal.html.erb
@@ -19,6 +19,6 @@
 	</table>
 </div>
 <div class="modal-footer">
-	<button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
+	<button class="btn btn-warning" ng-click="cancel($event)">Back</button>
 </div>
 </script>
