--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -8,6 +8,12 @@
   }
 }
 
+.panel-heading {
+  h4 {
+    margin-bottom: 10px;
+  }
+}
+
 #private_projects_filter {
   input {
     margin-left: 15px;
