--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -26,8 +26,8 @@
         <div class="col-md-12">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> Stage 1: Articulate problems and policy solutions</a></h4>   
-            </div>      
+              <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> Stage 1: Articulate problems and policy solutions</a></h4>
+            </div>
             <div class="collapse steps" id="stage1">
               <table class="table table-bordered">
                   <tbody>
@@ -68,7 +68,7 @@
         <div class="col-md-12">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4 class="panel-title" title="You must complete the previous stage"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 2 %>"></i> Stage 2: Articulate and prioritize objectives (Example)</a></h4>   
+              <h4 class="panel-title" title="You must complete the previous stage"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 2 %>"></i> Stage 2: Articulate and prioritize objectives (Example)</a></h4>
             </div>
             <div class="collapse steps" id="stage2">
               <table class="table table-bordered">
@@ -104,11 +104,11 @@
                   <table class="table_goals">
                   <tr title="Stage Uninitiated or Incomplete">
                     <td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
-                    <td><a data-toggle="collapse" href="#goal1" aria-expanded="false" aria-controls="collapseExample"><%= objective.title %></a></td>
+                    <td><a data-toggle="collapse" href="#goal-<%= objective.id %>" aria-expanded="false" aria-controls="collapseExample"><%= objective.title %></a></td>
                   </tr>
-                  </table> 
-                </div>      
-                <div class="collapse steps in" id="goal1">
+                  </table>
+                </div>
+                <div class="collapse steps in" id="goal-<%= objective.id %>">
                   <table class="table table-bordered">
                     <tbody>
                       <tr title="Uninitiated Step">
