--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="addNew col-md-12 text-right">
-    <%= link_to new_project_path, class: 'btn btn-default' do %>
+    <%= link_to new_project_path, class: 'btn btn-warning' do %>
       <i class="fa fa-plus-square-o"></i> New Project
     <% end %>
   </div>
