--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,39 +52,11 @@
         </div>
       </nav>
       <% else %>
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Wizard <span>Beta</span></a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="nav pull-right">
-              <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-              Sign in <span class="caret"></span>
-              </button>
-                <ul class="dropdown-menu" style="padding: 15px; right: 0; left: initial;" role="menu">
-                  <%= render 'layouts/signin' %>
-                </ul>
-                <!-- this prevent close the dropdown menu http://stackoverflow.com/a/16050828 -->
-                <script type="text/javascript">
-                  $('.dropdown-menu input').click(function(e) {
-                      e.stopPropagation();
-                  });
-                </script>
-          </div>
-        </div>
-      </nav>
+        <%= render 'layouts/navbar_signin' %>
       <% end %>
       <%= yield :breadcrumb %>
     </header>
-<%= yield :top %>
+    <%= yield :top %>
     <div role="main" class="container FullPage">
       <%= yield %>
     </div>
