--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -335,7 +335,7 @@ div#resources_paginate {
   box-shadow: inset 0px 10px 10px -4px rgba(0,0,0,0.06);
 }
 .modal-body input[type="checkbox"] {
-  margin: 4px 0 0;
+  /*margin: 4px 0 0;*/
   margin-top: 1px \9;
   line-height: normal;
   width: initial;
