add _self target

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -35,7 +35,7 @@
               <td>{{ project.focus_area }}</td>
               <td>
                 <i class="fa fa-gears" ng-click="add_edit_project(project)"></i>
-                <a href="/projects/{{ project.id }}"><i class="fa fa-edit"></i></a>
+                <a href="/projects/{{ project.id }}" target="_self"><i class="fa fa-edit"></i></a>
                 <i class="fa fa-eye" ng-click=""></i>
                 <i class="fa fa-trash" ng-click="delete_project(project)"></i>
               </td>
